--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -105,7 +105,7 @@ flag.mix.scannerserialnos=120603, 120807
 # This value observed in 9* batch B400026952148-RT2
 flag.mix.scannersoftwares=Quantum Scan;V 1.02.19
 # Senthil added according to 9* batch B400026952148-RT2
-flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil, Ravi
+flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil, Ravi, Darija Vrbanec, Jesper Olsen, Jesper, Kurt Nielsen, Tei Kofod, Katarina Pierzgova
 
 # Min width found in B400026952148-RT4 was 2139 seen in file
 # 400026952148-14/2002-02-13-01/morgenavisenjyllandsposten-2002-02-13-01-0145.mix.xml
