--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>dk.statsbiblioteket.newspaper</groupId>
     <artifactId>newspaper-parent</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.5</version>
   </parent>
 
   <artifactId>newspaper-manualQA-flagger</artifactId>
@@ -93,12 +93,12 @@
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
         <artifactId>tree-processor-runnable-component</artifactId>
-        <version>2.10-SNAPSHOT</version>
+        <version>2.11-SNAPSHOT</version>
       </dependency>
       <dependency>
           <groupId>dk.statsbiblioteket.newspaper</groupId>
           <artifactId>newspaper-autonomous-component</artifactId>
-          <version>2.10-SNAPSHOT</version>
+          <version>2.11-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
